--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,23 +1,9 @@
-# Copyright 2022 Paolo Bietolini
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     https://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
 homepage: "https://www.paolobietolini.xyz"
-documentation: "www.paolobietolini.xyz"
+documentation: "https://www.paolobietolini.xyz/documentation"
 versions:
   # Latest version
   - sha: 6188c69d840f27a19307cd8b53c2fa9b623d4d5c
     changeNotes: Add tests.
   # Older versions
-   - sha: c735301f2ea784deefc8d4659329cf0bedc8c70c
-    changeNotes: Initial Version.
+  - sha: c735301f2ea784deefc8d4659329cf0bedc8c70c
+    changeNotes: Initial release.
