--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
-homepage: "https://www.paolobietolini.xyz"
-documentation: "https://www.paolobietolini.xyz/documentation"
+homepage: "https://paolobietolini.com/"
+documentation: "https://paolobietolini.com/templates/boolean-conditions/"
 versions:
   # Latest version
   - sha: 6188c69d840f27a19307cd8b53c2fa9b623d4d5c
